--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-    "version": 2,
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
-  }
+  "rewrites": [{ "src": "/(.*)", "dest": "/index.html" }]
+}
