--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "dest": "/index.html" }]
+  "rewrites": [
+    {
+      "source": "/*",
+      "destination": "/index.html"
+    }
+  ]
 }
